@@ -21,9 +21,9 @@
 #include "OniPlatform.h"
 
 #define ONI_VERSION_MAJOR	2
-#define ONI_VERSION_MINOR	2
+#define ONI_VERSION_MINOR	3
 #define ONI_VERSION_MAINTENANCE	0
-#define ONI_VERSION_BUILD	33
+#define ONI_VERSION_BUILD	1
 
 /** OpenNI version (in brief string format): "Major.Minor.Maintenance (Build)" */ 
 #define ONI_BRIEF_VERSION_STRING \
