@@ -26,9 +26,9 @@ import stat
 from datetime import date
 
 VERSION_MAJOR = 2
-VERSION_MINOR = 2
+VERSION_MINOR = 3
 VERSION_MAINTENANCE = 0
-VERSION_BUILD = 33
+VERSION_BUILD = 1
 
 def getVersionString():
     return str(VERSION_MAJOR) + "." + str(VERSION_MINOR) + "." + str(VERSION_MAINTENANCE) + "." + str(VERSION_BUILD)
